# fastapi-blog-2

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  test_output.txt
app/: config.py  exceptions.py  handlers.py  main.py
app/api/: dao.py  likes_router.py  models.py  router.py  schemas.py
app/auth/: auth.py  dependencies.py  models.py  router.py  schemas.py
app/dao/: base.py  database.py  session_maker.py
app/migration/: env.py
app/pages/: router.py  views.py
app/static/css/: 404.css  auth.css  base.css  error.css  (+9 more)
app/stats/: router.py  service.py
app/templates/: 404.html  auth.html  base.html  create_blog.html  drafts.html  edit_blog.html  error.html  home.html  liked_posts.html  post.html  posts.html  profile.html  stats.html
data/: db.sqlite3  likes.json
test_data/: test_db.sqlite3
tests/: conftest.py  test_api_dao_unit_and_integration.py  test_api_router_extra.py  test_api_router_more.py  test_auth_api.py  test_auth_auth_and_schemas_unit.py  test_auth_dependencies_unit.py  test_auth_router_more.py  test_auth_schemas_more.py  test_base_dao_error_branches.py  test_base_dao_integration.py  test_base_dao_more.py  test_blog_api.py  test_likes_api.py  test_likes_router_more.py  test_likes_router_more_branches.py  test_main_handlers.py  test_main_handlers_more.py  test_pages_smoke.py  test_pages_views_99_coverage.py  test_pages_views_coverage.py  test_pages_views_functional.py  test_pages_views_more.py  test_session_maker_unit.py  test_stats_router.py  test_stats_service.py  test_stats_service_more.py
(+6 files in other folders)
